[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_Edit_Field_Values.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="2"]
[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="4"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="4_qomak"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Text.tscn" id="5_hiofx"]
[ext_resource type="PackedScene" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="6_stt74"]

[node name="popup_Edit_Field_Values" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4")
script = ExtResource("1")

[node name="PanelContainer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="VBox1" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Label" parent="PanelContainer/VBox1" instance=ExtResource("2")]
layout_mode = 2

[node name="HBox1" parent="PanelContainer/VBox1/Label" index="0"]
custom_minimum_size = Vector2(0, 30)

[node name="Label_Button" parent="PanelContainer/VBox1/Label/HBox1" index="0"]
disabled = true
text = "LABEL"
flat = true

[node name="Scroll1" type="ScrollContainer" parent="PanelContainer/VBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="PanelContainer/VBox1/Scroll1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DataType" parent="PanelContainer/VBox1/Scroll1/VBox1" instance=ExtResource("4_qomak")]
layout_mode = 2
selection_table_name = "DataTypes"
label_text = "Data Type"
is_label_button = false
show_field = true

[node name="FieldName" parent="PanelContainer/VBox1/Scroll1/VBox1" instance=ExtResource("5_hiofx")]
layout_mode = 2
is_label_button = false
show_field = true

[node name="RequiredValue" parent="PanelContainer/VBox1/Scroll1/VBox1" instance=ExtResource("6_stt74")]
layout_mode = 2
is_label_button = false
show_field = true

[node name="ShowValue" parent="PanelContainer/VBox1/Scroll1/VBox1" instance=ExtResource("6_stt74")]
layout_mode = 2
is_label_button = false
show_field = true

[node name="TableRef" parent="PanelContainer/VBox1/Scroll1/VBox1" instance=ExtResource("4_qomak")]
layout_mode = 2
label_text = "Tables"
is_label_button = false
show_field = true

[node name="HBox2" type="HBoxContainer" parent="PanelContainer/VBox1"]
layout_mode = 2

[node name="Accept" type="Button" parent="PanelContainer/VBox1/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="PanelContainer/VBox1/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Label2" type="Label" parent="PanelContainer/VBox1"]
visible = false
layout_mode = 2
size_flags_vertical = 1

[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Accept" to="." method="_on_Accept_button_up"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_Cancel_button_up"]

[editable path="PanelContainer/VBox1/Label"]
